--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.clearlee.autosendwechatmsg">
+    package="com.clearlee.wechatrobot">
 
     <uses-permission android:name="android.permission.REORDER_TASKS" />
 
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.clearlee.wechatrobot.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,7 @@
         </activity>
 
         <service
-            android:name=".AutoSendMsgService"
+            android:name="com.clearlee.wechatrobot.WeChatRobotService"
             android:enabled="true"
             android:exported="true"
             android:label="@string/app_name"
